# lightroom-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOVER.md  LICENSE  README.ja.md  README.md  SKILLS.md  TASK.md  pyproject.toml  pytest.ini  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml  test.yml
cli/: completions.py  decorators.py  helpers.py  main.py  middleware.py  output.py  schema.py  structured_group.py  validation.py
cli/commands/: ai_mask.py  catalog.py  develop.py  mcp.py  plugin.py  preview.py  selection.py  system.py
docs/: CLI_REFERENCE.md
docs/plans/: 2026-03-04-cli-and-stabilization-design.md  2026-03-04-distribution-prep.md  2026-03-04-lightroom-cli-implementation.md  2026-03-04-sdk-full-coverage.md  2026-03-04-sdk-gap-analysis.md  2026-03-05-agent-feedback-fixes-implementation.md  2026-03-05-agent-feedback-fixes.md  2026-03-05-agent-first-cli-design.md  2026-03-05-agent-first-cli-implementation.md  2026-03-05-agent-first-hardening.md  2026-03-05-ai-mask-implementation.md  2026-03-05-e2e-test-implementation.md  2026-03-06-mcp-and-windows-design.md  2026-03-06-mcp-and-windows-plan.md  2026-03-06-v1.2.0-implementation-plan.md  2026-03-06-v1.2.0-stability-and-batch-design.md
homebrew/: lightroom-cli.rb
lightroom-plugin/: AppShutdown.lua  CatalogModule.lua  DevelopModule.lua  Info.lua  MenuActions.lua  MessageProtocol.lua  PlatformPaths.lua  PluginInit.lua  PluginShutdown.lua  SelectionModule.lua  SimpleSocketBridge.lua  StopMenuAction.lua
lightroom-python-bridge.lrdevplugin/: PluginShutdown.lua
lightroom_sdk/: __init__.py  client.py  exceptions.py  paths.py  presets.py  protocol.py  resilient_bridge.py  retry.py  schema.py  socket_bridge.py  validation.py
lightroom_sdk/plugin/: CatalogModule.lua  CommandRouter.lua  Config.lua  DevelopModule.lua  ErrorUtils.lua  Info.lua  Logger.lua  MenuActions.lua  PlatformPaths.lua  PluginInit.lua  PreviewModule.lua  SelectionModule.lua  SimpleSocketBridge.lua  StopMenuAction.lua
lightroom_sdk/types/: __init__.py  catalog.py  develop.py
mcp_server/: __init__.py  _run.py  connection.py  instructions.py  server.py  tool_registry.py
plugin/.claude-plugin/: plugin.json
plugin/skills/lightroom-cli/: SKILL.md
plugin/skills/lightroom-cli/references/: catalog-find-filters.md  environment-and-mcp.md
scripts/: check-connection.py  check_version_sync.py  install-plugin.sh  install.sh  sync_version.py
tests/: conftest.py  test_bridge_command.py  test_catalog_filters.py  test_cli_catalog_rating_range.py  test_cli_help_all_commands.py  test_cli_json_log_suppression.py  test_cli_main.py  test_cli_mcp.py  test_cli_plugin.py  test_cli_schema.py  test_cli_system.py  test_client.py  test_collection_photos_and_presets.py  test_confirm_flag.py  test_decorators.py  test_develop_batch.py  test_dry_run_risk_level.py  test_filter_fields_dot_notation.py  test_helpers.py  test_incomplete_response.py  test_mcp_cli_equivalence.py  test_mcp_connection.py  test_mcp_instructions.py  test_mcp_server.py  test_mcp_tool_registry.py  test_middleware.py  test_mock_server.py  test_ndjson_streaming.py  test_output_formatter.py  test_output_sanitize.py  test_param_schema_min_max.py  test_paths.py  test_ping_compat.py  test_presets.py  test_project_structure.py  test_resilient_bridge.py  test_response_fields.py  test_retry.py  test_review_fixes.py  test_schema.py  (+14 more)
tests/e2e/: conftest.py  test_lightroom_commands.py  test_mcp_e2e.py  test_phase01_system.py  test_phase02_catalog_read.py  test_phase03_catalog_write.py  test_phase04_selection.py  test_phase05_develop_basic.py  test_phase06_develop_curve.py  test_phase07_develop_mask_filter.py  test_phase08_develop_debug_color.py  test_phase09_preview.py  test_phase10_destructive.py  test_phase11_ai_mask.py  test_plugin_workflow.py
tests/integration/: test_cli_ai_mask.py  test_cli_catalog.py  test_cli_catalog_advanced.py  test_cli_catalog_extended.py  test_cli_catalog_flag.py  test_cli_develop.py  test_cli_develop_color.py  test_cli_develop_complex.py  test_cli_develop_curve.py  test_cli_develop_debug.py  test_cli_develop_filter.py  test_cli_develop_local.py  test_cli_develop_mask.py  test_cli_develop_reset.py  test_cli_preview.py  test_cli_selection.py
tests/mocks/: lightroom_mock.py
